<resources>
    <string name="AudioDisplay">0</string>
    <string name="AudioOnOff">\u0009Audio On/Off</string>
    <string name="AudioStatus">\u0009\u0009AudioStatus</string>
    <string name="CloudControl">CloudControl</string>
    <string name="CurrentDsi">\u0009\u0009CurrentDsi</string>
    <string name="CurrentDsiAnt0">\u0009Ant0</string>
    <string name="CurrentDsiAnt1">\u0009Ant1</string>
    <string name="CurrentDsiAnt2">\u0009Ant2</string>
    <string name="CurrentDsiAnt3">\u0009Ant3</string>
    <string name="CurrentDsiAnt4">\u0009Ant4</string>
    <string name="CurrentDsiAnt5">\u0009Ant5</string>
    <string name="CurrentDsiDisplay">0</string>
    <string name="CurrentDsiDisplayAnt0">0</string>
    <string name="CurrentDsiDisplayAnt1">0</string>
    <string name="CurrentDsiDisplayAnt2">0</string>
    <string name="CurrentDsiDisplayAnt3">0</string>
    <string name="CurrentDsiDisplayAnt4">0</string>
    <string name="CurrentDsiDisplayAnt5">0</string>
    <string name="CurrentDsiDisplayOtherAnt">0</string>
    <string name="CurrentDsiOtherAnt">\u0009OtherAnts</string>
    <string name="DsiSetSwitch">\u0009DSI调试模式</string>
    <string name="GPIODisplay">0</string>
    <string name="GPIO_Status">\u0009\u0009GPIO_Status</string>
    <string name="HotspotDisplay">0</string>
    <string name="HotspotStatus">\u0009\u0009HotspotStatus</string>
    <string name="SAR">SAR</string>
    <string name="SAROnOff">\u0009SAR On/Off</string>
    <string name="SARUnLockLock">\u0009DSI手动下发锁定</string>
    <string name="ST_CurrentDsi">\u0009\u0009ST_CurrentDsi</string>
    <string name="ST_CurrentDsiDisplay">-1</string>
    <string name="ST_CurrentMcc">\u0009\u0009ST_CurrentMcc</string>
    <string name="ST_CurrentMccDisplay">-1</string>
    <string name="ST_EffectiveRegulatoryBody">\u0009\u0009ST_EffectiveRegulatoryBody</string>
    <string name="ST_EffectiveRegulatoryBodyDisplay">-1</string>
    <string name="ST_ExposureMode">\u0009\u0009ST_ExposureMode</string>
    <string name="ST_ExposureModeDisplay">-1</string>
    <string name="ST_MccRegulatoryBody">\u0009\u0009ST_MccRegulatoryBody</string>
    <string name="ST_MccRegulatoryBodyDisplay">-1</string>
    <string name="ST_PeakModeOverrideMask">\u0009\u0009ST_PeakModeOverrideMask</string>
    <string name="ST_PeakModeOverrideMaskDisplay">-1</string>
    <string name="ST_QstGen">\u0009\u0009ST_QstGen</string>
    <string name="ST_QstGenDisplay">-1</string>
    <string name="ST_QstMode">\u0009\u0009ST_QstMode</string>
    <string name="ST_QstModeDisplay">-1</string>
    <string name="ST_SensingMode">\u0009\u0009ST_SensingMode</string>
    <string name="ST_SensingModeDisplay">-1</string>
    <string name="Sensor1Display">0</string>
    <string name="Sensor1_Status">\u0009\u0009Sensor1_Status</string>
    <string name="Sensor2Display">0</string>
    <string name="Sensor2_Status">\u0009\u0009Sensor2_Status</string>
    <string name="Sensor3Display">0</string>
    <string name="Sensor3_Status">\u0009\u0009Sensor3_Status</string>
    <string name="SetDsi">\u0009SetDsi</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="app_name">LightLite POC7</string>
    <string name="audio_spk_cal_wait">Calibration, please...</string>
    <string name="audio_spk_def">Calibrate the speakers, please</string>
    <string name="auto_frontflash_description">All the front flash lights are on, click to pass, otherwise click to fail</string>
    <string name="auto_frontflash_title">Front camera flash test</string>
    <string name="auto_rearflash_description">All rear camera flash lights are on, click to pass, otherwise click to fail</string>
    <string name="auto_rearflash_title">Rear camera flash test</string>
    <string name="aux_mic_check_record_tip">Recording, please say something to AUX MIC at the bottom of the device</string>
    <string name="back_mic_check_record_tip">Recording, please say something to MIC at the back of the device</string>
    <string name="battery_authentic">Battery Authentic</string>
    <string name="battery_dual_connector">BatteryDualConnector</string>
    <string name="battery_id">Battery ID</string>
    <string name="battery_plug_wirelee_summary">Wireless charger each connection, disconnect once</string>
    <string name="battery_plug_wirelee_title">Wireless charging test</string>
    <string name="battery_plugin_wirelee">Wireless charging is connected</string>
    <string name="battery_plugout_wirelee">Please connect wireless charging</string>
    <string name="battery_reverse_wireless_charge_success">reverse wireless charge success</string>
    <string name="battery_reverse_wireless_charge_summary">reverse wireless charge test</string>
    <string name="battery_reverse_wireless_charge_time_out">reverse wireless charge time out</string>
    <string name="battery_reverse_wireless_charge_title">reverse wireless charge</string>
    <string name="battery_third_connector">Battery Connector Voltage</string>
    <string name="battery_value">Electricity</string>
    <string name="bottom_high_speaker_title">Bottom tweeter test</string>
    <string name="bottom_left_high_speaker">Left side bottom tweeter test</string>
    <string name="bottom_left_low_speaker">Left side bottom woofer test</string>
    <string name="bottom_low_speaker_title">Bottom woofer test</string>
    <string name="bottom_right_high_speaker">Right side bottom tweeter test</string>
    <string name="bottom_right_low_speaker">Right side bottom woofer test</string>
    <string name="bottom_speaker_title">Bottom speaker test</string>
    <string name="bt_address">Address:</string>
    <string name="bt_name">Name:</string>
    <string name="camera_capture">Capture</string>
    <string name="camerainfo">Camera information</string>
    <string name="cancel">Cancel</string>
    <string name="charger_test_end">"
Charger test end, please plug out the charger"</string>
    <string name="cit_DP_check_summary">The type-C to DP Cable should be connected during the testing process</string>
    <string name="cit_DP_check_title">DP Test</string>
    <string name="cit_DP_in_start_test">Please insert the type-C to DP Cable to start the testing</string>
    <string name="cit_DP_plug_err">"Detection device connection change 
 Read the underlying node value failed 
 Did not get the value"</string>
    <string name="cit_headset_button_next">Next</string>
    <string name="cit_headset_button_play_pause">Play/Pause</string>
    <string name="cit_headset_button_previous">Previous</string>
    <string name="cit_headset_left_hph_val">Left Channe Impedance Value：</string>
    <string name="cit_headset_plug_hint">Connect headphones now</string>
    <string name="cit_headset_right_hph_val">Riht Channe Impedance Value：</string>
    <string name="cit_init_fp_fod_test_tip">Init Fingerprint Test Environment</string>
    <string name="cit_start_calibration">Calibrate</string>
    <string name="cit_tool_asdiv_ant_pos_setting">set ant position</string>
    <string name="cit_tool_asdiv_get_result_band_title">Current ant band</string>
    <string name="cit_tool_asdiv_get_result_carrier_title">Current ant carrier cell</string>
    <string name="cit_tool_asdiv_get_result_sub_title">Current sub</string>
    <string name="cit_tool_asdiv_get_result_tech_title">Current ant tech</string>
    <string name="cit_tool_asdiv_get_result_title">Current ant pos</string>
    <string name="cit_tool_asdiv_get_status">Get Status</string>
    <string name="cit_tool_asdiv_set_status">Set Status</string>
    <string name="cit_tool_asdiv_title">ASDIV SETTING</string>
    <string name="cit_tool_prx_drx_select_mode">Select Mode:</string>
    <string name="cit_tool_prx_drx_select_rat">Select RAT:</string>
    <string name="cit_tool_prx_drx_start_test">Start Test</string>
    <string name="cit_tool_wlan_chain_1">1</string>
    <string name="cit_tool_wlan_chain_1_2">1+2</string>
    <string name="cit_tool_wlan_chain_2">2</string>
    <string name="cit_tool_wlan_rx_ap">Rx: AP</string>
    <string name="cit_tool_wlan_rx_ap_name">MT</string>
    <string name="cit_tool_wlan_rx_dut_ip">192.168.1.12</string>
    <string name="cit_tool_wlan_rx_run">Run</string>
    <string name="cit_tool_wlan_txrx_chain_selection">Select antenna</string>
    <string name="cit_uwb_calibrate_color_black">Black</string>
    <string name="cit_uwb_calibrate_color_cali_tip">Please select the back shell of the machine before performing data calibration</string>
    <string name="cit_uwb_calibrate_color_gray">Gray</string>
    <string name="cit_uwb_calibrate_color_white">White</string>
    <string name="cit_uwb_calibrate_data_cali_tip">Data Calibration</string>
    <string name="close_third_color_led">close three color led</string>
    <string name="enrolCount">EnrolCount</string>
    <string name="enrolQuality">EnrolQuality</string>
    <string name="motor_calibration">Motor Calibration</string>
    <string name="open_third_color_led">open three color led</string>
    <string name="pop_camera">Pop Camera</string>
    <string name="push_camera">Push Camera</string>
    <string name="tips_show_current_angle">Show current angle</string>
    <string name="tips_show_current_sar_sensor_data">Show current sensor data</string>
</resources>