<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <Button
        android:gravity="center_horizontal"
        android:id="@id/btn_pop_camera"
        android:layout_width="150.0dip"
        android:layout_height="wrap_content"
        android:layout_marginTop="100.0dip"
        android:text="@string/pop_camera"
        android:layout_marginStart="20.0dip"
        android:layout_alignParentStart="true" />
    <Button
        android:gravity="center_horizontal"
        android:id="@id/btn_push_camera"
        android:layout_width="150.0dip"
        android:layout_height="wrap_content"
        android:layout_marginTop="100.0dip"
        android:text="@string/push_camera"
        android:layout_marginEnd="20.0dip"
        android:layout_alignParentEnd="true" />
    <Button
        android:gravity="center_horizontal"
        android:id="@id/btn_open_three_color_light"
        android:layout_width="150.0dip"
        android:layout_height="wrap_content"
        android:layout_marginTop="100.0dip"
        android:text="@string/open_third_color_led"
        android:layout_below="@id/btn_pop_camera"
        android:layout_marginStart="20.0dip"
        android:layout_alignParentStart="true" />
    <Button
        android:gravity="center_horizontal"
        android:id="@id/btn_close_three_color_light"
        android:layout_width="150.0dip"
        android:layout_height="wrap_content"
        android:layout_marginTop="100.0dip"
        android:text="@string/close_third_color_led"
        android:layout_below="@id/btn_pop_camera"
        android:layout_marginEnd="20.0dip"
        android:layout_alignParentEnd="true" />
    <Button
        android:gravity="center_horizontal"
        android:id="@id/btn_motor_calibration"
        android:layout_width="150.0dip"
        android:layout_height="wrap_content"
        android:layout_marginTop="100.0dip"
        android:text="@string/motor_calibration"
        android:layout_below="@id/btn_open_three_color_light"
        android:layout_marginStart="20.0dip"
        android:layout_alignParentStart="true" />
</RelativeLayout>