<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:background="@color/black"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:keepScreenOn="true"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:orientation="vertical"
        android:id="@id/fod_enrolProgressLL"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_gravity="right"
            android:id="@id/fod_enrolCountTV"
            android:paddingTop="10.0dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10.0dip"
            android:text="@string/enrolCount" />
        <ProgressBar
            android:id="@id/fod_enrolProgressBar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:max="100"
            android:progress="0"
            style="?android:progressBarStyleHorizontal" />
        <TextView
            android:layout_gravity="center"
            android:id="@id/fod_enrolQualityTV"
            android:background="@android:color/black"
            android:paddingTop="10.0dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enrolQuality" />
    </LinearLayout>
    <Button
        android:textColor="#ffffffff"
        android:layout_gravity="center"
        android:id="@id/bt_fod_init_env"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30.0dip"
        android:text="@string/cit_init_fp_fod_test_tip"
        android:layout_below="@id/fod_enrolProgressLL"
        android:layout_centerHorizontal="true" />
    <TextView
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:id="@id/fod_verifyResultTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lines="2"
        android:layout_below="@id/fod_enrolProgressLL" />
</RelativeLayout>